fixed z-index issue with main content

--- a/docs/css/module/main-content.less
+++ b/docs/css/module/main-content.less
@@ -22,8 +22,9 @@ main {
   position: relative;
   padding: 20px 10px 0px 10px;
   opacity: 1;
-  .transition(opacity 0.2s ease);
   font-size: 15px;
+  z-index: 0;
+  .transition(opacity 0.2s ease);
 
   @linkColor: #485ecf;
   a {
